Ceo agregado y Cambio de texto y imagenes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Inicio</title>
+	<meta name="keywords" content="Mimbres, mimbre, mimbreria, junco, tandil, natural, decoracion, 14 de julio, muebles, cortinas, a medida">
+	<meta name="description" content="En Mimbre todo!! Desde Muebles hasta todo tipo de objetos decorativos.
+	LLEGAMOS A TODO EL PAIS CONSULTANOS!!">
+	<title>Tandil Mimbres</title>
     <link rel="shortcut icon" href="pngs/favicon-32x32.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/Estilo.css">	
@@ -16,10 +19,10 @@
 	<header class="over">
 		<nav class="menu">
 		    <ul class="barra">
+		    	<li><img src="pngs/favicon-32x32.png" alt="logo"></li>
 		        <li><a href="index.html">Inicio</a></li>
 		        <li><a href="pages/productos.html">Productos</a></li>
 	            <li><a href="pages/servicios.html">Servicios</a></li>
-		        <li><a href="pages/sobrenosotros.html">Sobre Nosotros</a></li>
 		        <li><a href="pages/contactanos.html">Contactanos</a></li>
 	        </ul>
 
@@ -30,8 +33,8 @@
 	</header>
 
     <div class="background">
-    	<h1>Titulo</h1>
-		<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est nostrum voluptatem ut sit ullam minus a animi nam rem, enim, provident sunt amet, laboriosam eaque suscipit. Eveniet iusto possimus atque.</p>
+    	<h1>Tandil Mimbres</h1>
+		<p>Somos una Mimbreria con años de experiencia originaria de Tandil, dale un toque natural a lo que sea con nuestro gran catálogo de productos y gran relación calidad-precio.</p>
 	</div>
 
     <footer class="box">
@@ -40,6 +43,7 @@
             </a></li>
             <li><a href="https://www.instagram.com/tandil_mimbres/?hl=es-la" target="_blank" class="fa fa-instagram">  	
             </a></li>
+            <li>Tel: +54 9 2494 24-0564</li>
         </ul>
 	    <img src="pngs/favicon-32x32.png" alt="logo">
     </footer>
