--- a/pages/productos.html
+++ b/pages/productos.html
@@ -4,7 +4,9 @@
 	
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Productos</title>
+	<meta name="keywords" content="Mimbres, mimbre, mimbreria, junco, tandil, natural, decoracion, 14 de julio, muebles, cortinas, a medida">
+	<meta name="description" content="Nuestra selección de productos con medidas estándar, para que encuentres lo que necesitabas al mejor precio.">
+	<title>Productos|Tandil Mimbres</title>
 	<link rel="shortcut icon" href="../pngs/favicon-32x32.png">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="../css/Estilo.css">
@@ -19,7 +21,6 @@
 				<li><a href="../index.html">Inicio</a></li>
 				<li><a href="productos.html">Productos</a></li>
 				<li><a href="servicios.html">Servicios</a></li>
-				<li><a href="sobrenosotros.html">Sobre Nosotros</a></li>
 				<li><a href="contactanos.html">Contactanos</a></li>
 			</ul>
 			
@@ -35,25 +36,26 @@
 	
 	<section class="cess">	
 		<article>
-			<h3>Producto 1</h3>
-			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem excepturi culpa quo molestiae officia nulla maxime deleniti cupiditate quod. Quia suscipit accusamus reprehenderit, nihil. Maxime sunt ab dicta, minima inventore.</p>
-		    <img src="../pngs/placeholder.png" alt="producto">
+			<h3>Banqueta romana</h3>
+			<p>Banqueta romana de caña individual.<br> Precio: 5300$
+			</p>
+		    <img src="../pngs/banqueta romana.jpeg" alt="producto" width="225" height="225">
 		</article>
 	</section>
 
 	<section class="cess2">	
 		<article>
-			<h3>Producto 2</h3>
-			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem excepturi culpa quo molestiae officia nulla maxime deleniti cupiditate quod. Quia suscipit accusamus reprehenderit, nihil. Maxime sunt ab dicta, minima inventore.</p>
-		    <img src="../pngs/placeholder.png" alt="producto">
+			<h3>Florero tejido</h3>
+			<p>Florero tejido en mimbre.<br>Precio: 2400$</p>
+		    <img src="../pngs/florero tejido.jpeg" alt="producto" width="225" height="325">
 		</article>
 	</section>
 
     <section class="cess3">
 		<article>
-			<h3>Producto 3</h3>
-			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem excepturi culpa quo molestiae officia nulla maxime deleniti cupiditate quod. Quia suscipit accusamus reprehenderit, nihil. Maxime sunt ab dicta, minima inventore.</p>
-		    <img src="../pngs/placeholder.png" alt="producto">
+			<h3>Leñero</h3>
+			<p>Leñero de mimbre entero grande.<br>Precio: 5800$</p>
+		    <img src="../pngs/Leñero.jpeg" alt="producto" width="225" height="225">
 		</article>
 	</section>
 	    	
@@ -63,6 +65,7 @@
             </a></li>
             <li><a href="https://www.instagram.com/tandil_mimbres/?hl=es-la" target="_blank" class="fa fa-instagram">  	
             </a></li>
+            <li>Tel: +54 9 2494 24-0564</li>
         </ul>
 	    <img src="../pngs/favicon-32x32.png" alt="logo">
     </footer>
