--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -3,7 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Servicios</title>
+	<meta name="keywords" content="Mimbres, mimbre, mimbreria, junco, tandil, natural, decoracion, 14 de julio, muebles, cortinas, a medida">
+	<meta name="description" content="Te ofrecemos nuestra variedad de servicios para que te lleves lo que buscabas a medida">
+	<title>Servicios|Tandil Mimbres</title>
 	<link rel="shortcut icon" href="../pngs/favicon-32x32.png">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="../css/Estilo.css">
@@ -18,7 +20,6 @@
 				<li><a href="../index.html">Inicio</a></li>
 				<li><a href="productos.html">Productos</a></li>
 				<li><a href="servicios.html">Servicios</a></li>
-				<li><a href="sobrenosotros.html">Sobre Nosotros</a></li>
 				<li><a href="contactanos.html">Contactanos</a></li>
 			</ul>
 
@@ -34,15 +35,17 @@
 
     <section class="cess">
 	    <article>
-	        <h3>Servicio 1</h3>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing, elit. Sed quae pariatur expedita ea nisi praesentium? Consequuntur nesciunt impedit voluptatibus nisi aliquam mollitia molestiae illo. Consequatur iusto beatae distinctio, reprehenderit enim.</p>
+	        <h3>Cortinas de Mimbre</h3>
+            <p>Cortinas a medida de junco, Pasamos presupuesto sin cargo.</p>
+            <img src="../pngs/cortina.jpeg" alt="producto" width="225" height="225">
         </article>
     </section>
 
     <section class="cess2">
         <article>
-    	    <h3>Servicio 2</h3>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing, elit. Sed quae pariatur expedita ea nisi praesentium? Consequuntur nesciunt impedit voluptatibus nisi aliquam mollitia molestiae illo. Consequatur iusto beatae distinctio, reprehenderit enim.</p>
+    	    <h3>Cajones de Junco</h3>
+            <p>Cajones de junco a medida, Pasamos presupuesto sin cargo.</p>
+            <img src="../pngs/cajones.jpeg" alt="producto" width="325" height="325">
         </article>
     </section>
     
@@ -52,6 +55,7 @@
             </a></li>
             <li><a href="https://www.instagram.com/tandil_mimbres/?hl=es-la" target="_blank" class="fa fa-instagram">  	
             </a></li>
+            <li>Tel: +54 9 2494 24-0564</li>
         </ul>
 	        <img src="../pngs/favicon-32x32.png" alt="logo">
     </footer>
