Seo, Sass, fotos (correcciones)

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta name="description" content="En Mimbre todo!! Desde Muebles hasta todo tipo de objetos decorativos.
 	LLEGAMOS A TODO EL PAIS CONSULTANOS!!">
 	<title>Tandil Mimbres</title>
-    <link rel="shortcut icon" href="pngs/favicon-32x32.png">
+    <link rel="shortcut icon" href="pngs/favicon-32x32.jpeg">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/Estilo.css">	
 </head>
@@ -19,7 +19,7 @@
 	<header class="over">
 		<nav class="menu">
 		    <ul class="barra">
-		    	<li><img src="pngs/favicon-32x32.png" alt="logo"></li>
+		    	<li><img src="pngs/favicon-32x32.jpeg" alt="logo"></li>
 		        <li><a href="index.html">Inicio</a></li>
 		        <li><a href="pages/productos.html">Productos</a></li>
 	            <li><a href="pages/servicios.html">Servicios</a></li>
@@ -45,7 +45,7 @@
             </a></li>
             <li>Tel: +54 9 2494 24-0564</li>
         </ul>
-	    <img src="pngs/favicon-32x32.png" alt="logo">
+	    <img src="pngs/favicon-32x32.jpeg" alt="logo">
     </footer>
     </div>
     
