--- a/pages/productos.html
+++ b/pages/productos.html
@@ -7,7 +7,7 @@
 	<meta name="keywords" content="Mimbres, mimbre, mimbreria, junco, tandil, natural, decoracion, 14 de julio, muebles, cortinas, a medida">
 	<meta name="description" content="Nuestra selección de productos con medidas estándar, para que encuentres lo que necesitabas al mejor precio.">
 	<title>Productos|Tandil Mimbres</title>
-	<link rel="shortcut icon" href="../pngs/favicon-32x32.png">
+	<link rel="shortcut icon" href="../pngs/favicon-32x32.jpeg">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="../css/Estilo.css">
 </head>
@@ -17,7 +17,7 @@
     <header class="over">
 		<nav class="menu">
 			<ul class="barra">
-				<li><img src="../pngs/favicon-32x32.png" alt="logo"></li>
+				<li><img src="../pngs/favicon-32x32.jpeg" alt="logo"></li>
 				<li><a href="../index.html">Inicio</a></li>
 				<li><a href="productos.html">Productos</a></li>
 				<li><a href="servicios.html">Servicios</a></li>
@@ -39,7 +39,7 @@
 			<h3>Banqueta romana</h3>
 			<p>Banqueta romana de caña individual.<br> Precio: 5300$
 			</p>
-		    <img src="../pngs/banqueta romana.jpeg" alt="producto" width="225" height="225">
+		    <img src="../pngs/banqueta-romana.jpeg" alt="producto" width="225" height="225">
 		</article>
 	</section>
 
@@ -47,7 +47,7 @@
 		<article>
 			<h3>Florero tejido</h3>
 			<p>Florero tejido en mimbre.<br>Precio: 2400$</p>
-		    <img src="../pngs/florero tejido.jpeg" alt="producto" width="225" height="325">
+		    <img src="../pngs/florero-tejido.jpeg" alt="producto" width="225" height="325">
 		</article>
 	</section>
 
@@ -67,7 +67,7 @@
             </a></li>
             <li>Tel: +54 9 2494 24-0564</li>
         </ul>
-	    <img src="../pngs/favicon-32x32.png" alt="logo">
+	    <img src="../pngs/favicon-32x32.jpeg" alt="logo">
     </footer>
 
     </div>
