--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -6,7 +6,7 @@
 	<meta name="keywords" content="Mimbres, mimbre, mimbreria, junco, tandil, natural, decoracion, 14 de julio, muebles, cortinas, a medida">
 	<meta name="description" content="Te ofrecemos nuestra variedad de servicios para que te lleves lo que buscabas a medida">
 	<title>Servicios|Tandil Mimbres</title>
-	<link rel="shortcut icon" href="../pngs/favicon-32x32.png">
+	<link rel="shortcut icon" href="../pngs/favicon-32x32.jpeg">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="../css/Estilo.css">
 </head>
@@ -16,7 +16,7 @@
 	<header class="over">
 		<nav class="menu">
 			<ul class="barra">
-				<img src="../pngs/favicon-32x32.png" alt="logo">
+				<img src="../pngs/favicon-32x32.jpeg" alt="logo">
 				<li><a href="../index.html">Inicio</a></li>
 				<li><a href="productos.html">Productos</a></li>
 				<li><a href="servicios.html">Servicios</a></li>
@@ -57,7 +57,7 @@
             </a></li>
             <li>Tel: +54 9 2494 24-0564</li>
         </ul>
-	        <img src="../pngs/favicon-32x32.png" alt="logo">
+	        <img src="../pngs/favicon-32x32.jpeg" alt="logo">
     </footer>
     </div>
 
