--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 		        <li><a href="pages/productos.html">Productos</a></li>
 	            <li><a href="pages/servicios.html">Servicios</a></li>
 		        <li><a href="pages/contactanos.html">Contactanos</a></li>
+		        <li><a href="pages/form.html">Contacto Empresarial</a></li>
 	        </ul>
 
 	        <div class="hide">
