--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -21,6 +21,7 @@
 				<li><a href="productos.html">Productos</a></li>
 				<li><a href="servicios.html">Servicios</a></li>
 				<li><a href="contactanos.html">Contactanos</a></li>
+				<li><a href="form.html">Contacto Empresarial</a></li>
 			</ul>
 
 			<div class="hide">
