fix background index y cambios en el css

--- a/pages/form.html
+++ b/pages/form.html
@@ -43,6 +43,7 @@
 
 	<section class="cess2">
 		<article>
+			<h3>Formulario</h3>
 			<form action="#" class="form">
 				
 				<label for="text">Nombre y Apellido o Nombre de la compania:
